# platform

./: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  alembic.ini  docker-compose.bootnode.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml  release-notes.md  release-please-config.json  self-update-manifest.json
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_create_challenge_registry.py  0002_create_miner_request_nonces.py  0004_create_llm_usage_records.py  0005_create_work_assignments.py
bins/csudo/src/: main.rs
bins/platform-cli/src/: main.rs
bins/platform-sudo/: Cargo.toml
bins/platform-sudo/src/: main.rs
bins/platform/src/: server.rs
bins/validator-node/: Cargo.toml
bins/validator-node/src/: challenge_storage.rs  main.rs  wasm_executor.rs
bins/validator-node/tests/: integration_test.rs
challenges/: README.md
config/: master.example.yaml  validator.example.yaml
coverage-html/html/: index.html
crates/bittensor-integration/src/: block_sync.rs  challenge_weight_collector.rs  client.rs  lib.rs  mock.rs  tests.rs  validator_sync.rs  weights.rs
crates/challenge-orchestrator/src/: backend.rs  circuit_breaker.rs  config.rs  docker.rs  evaluator.rs  health.rs  lib.rs  lifecycle.rs
crates/challenge-registry/src/: health.rs  state.rs  (+3 more)
crates/challenge-sdk/: Cargo.toml
crates/consensus/: Cargo.toml
crates/network/: Cargo.toml
crates/platform-server/: Cargo.toml
crates/rpc-server/: Cargo.toml
crates/wasm-runtime-interface/: Cargo.toml
deploy/swarm/: README.md  acquire-agent-challenge-cache.sh  acquire-prism-fineweb-cache.sh  daemon.validator.json  daemon.worker.json  install-swarm.sh  master.yaml  platform-supervisor.service  validator.yaml
docker/: Dockerfile.challenge  Dockerfile.master  Dockerfile.validator  Dockerfile.validator-runtime  compose.dev.yml  compose.yml  entrypoint-bootnode.sh  entrypoint.sh
docs/: architecture.md  challenge-integration.md  challenges.md  security.md  validator.md  versioning.md
docs/master/: README.md
docs/miner/: README.md
docs/operations/: validator.md
docs/validator/: README.md
golden/: dataset-digest.json
scripts/: archive_prism_postgres.sh  install-docker.sh  install-master.sh  install-validator.sh  install-worker.sh  phase0_worker_probe.sh  test-all.sh  test-comprehensive.sh  test-harness.sh  verify-nightly-config.sh
scripts/check-duplicate-instance-ids/: Cargo.toml
scripts/fresh-container-replay/: Cargo.toml
scripts/fresh-container-replay/src/: main.rs
scripts/test-command-execution/: Cargo.toml
scripts/test-command-execution/src/: main.rs
scripts/validate-test-commands/: Cargo.toml
scripts/validate-test-commands/src/: main.rs
src/platform_network/: cli.py
tests/: Cargo.toml  bittensor_tests.rs  blockchain_state_tests.rs  challenge_runtime_tests.rs  checkpoint_tests.rs  e2e_tests.rs  error_cases.rs  network_tests.rs  rpc_server_tests.rs  storage_tests.rs  sudo_action_tests.rs  wasm_challenge_tests.rs
tests/contract/: test_broker_golden.py
tests/docker/: Dockerfile.test-validator  docker-compose.multi-validator.yml  entrypoint-test.sh  test-multi-validator.sh
tests/integration/: conftest.py  test_base_bittensor_network_flow.py  test_end_to_end_decentralized.py  test_kubernetes_managed_postgres.py  test_llm_usage_records_postgres.py  test_master_weights_postgres.py  test_orchestration_postgres.py  test_platform_bittensor_network_flow.py  test_postgres_migrations.py  test_postgres_registry.py  test_validator_image_updater_mutable_tag.py  test_work_assignment_postgres.py
tests/parity/: parity_harness.py  test_backend_parity.py
tests/unit/: test_admin_registry_proxy.py  test_aggregator.py  test_assignment.py  test_bittensor_factory.py  test_bittensor_wrappers.py  test_broker_health_async.py  test_broker_mount_transport.py  test_broker_quota.py  test_central_gate_gateway.py  test_challenge_image_updater.py  test_challenge_sdk_docker_executor.py  test_challenge_work_source.py  test_client_service_cli_config.py  test_config_sync.py  test_config_template_security.py  test_db_and_models.py  test_docker_broker_app.py  test_docker_broker_artifact_perms.py  test_docker_compose_deploy.py  test_docker_orchestrator_extended.py  test_escape_hatch.py  test_github_workflows.py  test_gpu_registry_capabilities.py  test_helm_chart.py  test_image_updater.py  test_image_updater_targets.py  test_install_swarm_decentralized_deploy.py  test_install_swarm_greenfield.py  test_install_swarm_mainnet_secrets.py  test_install_swarm_master_subsystems.py  test_install_swarm_prism_worker.py  test_install_swarm_secret_paths.py  test_install_swarm_secret_volume_ownership.py  test_install_swarm_supervisor.py  test_install_worker_ghcr.py  test_kubernetes_agent.py  test_kubernetes_broker.py  test_kubernetes_client.py  test_kubernetes_orchestrator.py  test_kubernetes_resources.py  (+46 more)
(+503 files in other folders)
