[project]
name = "platform-network"
version = "3.0.1"
description = "Multi-challenge Bittensor subnet validator platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0",
  "typer>=0.12",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "docker>=7.1",
  "sentry-sdk[fastapi]>=2.0",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-httpx>=0.46b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0"
]

[project.optional-dependencies]
bittensor = ["bittensor>=9"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-docker>=7.1",
  "types-PyYAML>=6.0"
]
master = ["bittensor>=9", "kubernetes>=30"]
validator = ["bittensor>=9", "kubernetes>=30"]

[project.scripts]
platform = "platform_network.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_network"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
packages = ["platform_network"]
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["platform_network"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
