[package]
name = "fresh-container-replay"
version = "0.1.0"
edition = "2021"
description = "Fresh-container replay validation for SWE-bench tasks. Clones repo, applies patch, runs test commands in Docker to verify dual-commit validation."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.12"
