[package]
name = "test-command-execution"
version = "0.1.0"
edition = "2021"
description = "Validates that test commands can execute without 'command not found' errors in Docker containers. Runs harness on sample tasks and checks output for command execution errors."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.12"
